rowDown and rowUp

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
    <div class="buttons">
         <button class="btn" id="deleteBtn">Delete Row</button>
         <button class="btn">Clear Row Images</button>
-        <button class="btn">Add a Row Above</button>
+        <button class="btn" id="addRowAbove">Add a Row Above</button>
         <button class="btn">Add a Row Below</button>
    </div>
     <span class="closePanel" id="closePanel">X</span>
