--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <button class="btn" id="deleteBtn">Delete Row</button>
         <button class="btn">Clear Row Images</button>
         <button class="btn" id="addRowAbove">Add a Row Above</button>
-        <button class="btn">Add a Row Below</button>
+        <button class="btn" id="addRowBelow">Add a Row Below</button>
    </div>
     <span class="closePanel" id="closePanel">X</span>
 </div>
