--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <td> 
                     <div class="row" style="width: 100%; height: 100px;">
                         <div class="label" style="background-color: #FF7F7F;" >S</div>
+                        <div class="item" draggable="true">s</div>
                     </div>
                 </td>
                     <td>
@@ -34,7 +35,10 @@
         </tbody>
    
 </table>
-
+<div class="items" id="items">
+    
+   
+</div>
 <div id="showSettingsPanel">
     <h2 style="margin-bottom: 20px;">Choose a Label Background Color:</h2>
     <div class="chooseColor">
@@ -53,7 +57,7 @@
     <span class="closePanel" id="closePanel">X</span>
 </div>
 
-    
+    <script src="drag.js"></script>
     <script src="rows.js"></script> 
     <script src="item.js"></script>
 
